syntax = "proto3";

package netcoregrpc.certauth.proto;

option csharp_namespace = "NetCoreGrpc.CertAuth.Proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
